--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Blocker",
+    "name": "Blocked!",
     "description": "Block it!",
     "version": "1.0",
     "manifest_version": 3,
